<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.skinsight.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_scanx"
        android:name="com.capstone.skinsight.ui.scanx.ScanxFragment"
        android:label="@string/title_scanx"
        tools:layout="@layout/fragment_scanx"/>

    <fragment
        android:id="@+id/navigation_heal"
        android:name="com.capstone.skinsight.ui.heal.HealFragment"
        android:label="@string/title_heal"
        tools:layout="@layout/fragment_heal"/>
</navigation>