<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.heal.HealFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginHorizontal="5dp"
                android:id="@+id/tvTitle1"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title1"
                android:textSize="20sp"/>

            <TextView
                android:layout_marginHorizontal="5dp"
                android:id="@+id/tvDesc1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="50"
                android:layout_marginBottom="80dp"
                android:text="@string/desc1"/>

            <TextView
                android:layout_marginHorizontal="5dp"
                android:id="@+id/tvTitle2"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title2"
                android:textSize="20sp"/>

            <TextView
                android:layout_marginHorizontal="5dp"
                android:id="@+id/tvDesc2"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="50"
                android:layout_marginBottom="80dp"
                android:text="@string/desc2"/>

            <TextView
                android:layout_marginHorizontal="5dp"
                android:id="@+id/tvTitle3"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title3"
                android:textSize="20sp"/>

            <TextView
                android:layout_marginHorizontal="5dp"
                android:id="@+id/tvDesc3"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="50"
                android:layout_marginBottom="80dp"
                android:text="@string/desc3"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
