<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivArticle"
            tools:src="@tools:sample/backgrounds/scenic"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/img_article" />
        <TextView
            android:layout_marginHorizontal="5dp"
            android:id="@+id/tvTitle"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_article"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginHorizontal="5dp"
            android:id="@+id/tvDesc"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:layout_marginBottom="10dp"
            android:text="@string/desc_article"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>